--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
       <button id="clickBtn">Click Me</button>
       <p id="result"></p>
     </div>
-    <!-- <script type="module" src="/src/main.jsx"> -->
-    <script>
-        // Access and manipulate DOM
-        const title = document.getElementById("main-title");
-        console.log("titile:", title);
-        title.textContent = "DOM Manipulated!";
+    <script type="module" src="/src/main.jsx">
+      // <script>
+            // Access and manipulate DOM
+            const title = document.getElementById("main-title");
+            console.log("titile:", title);
+            title.textContent = "DOM Manipulated!";
 
-        const message = document.querySelector(".message");
-        message.style.color = "blue";
-        message.style.fontWeight = "bold";
+            const message = document.querySelector(".message");
+            message.style.color = "blue";
+            message.style.fontWeight = "bold";
 
-        // Event handling
-        const button = document.getElementById("clickBtn");
-        const result = document.getElementById("result");
+            // Event handling
+            const button = document.getElementById("clickBtn");
+            const result = document.getElementById("result");
 
-        button.addEventListener("click", function () {
-          result.textContent = "Button was clicked!";
-          result.style.color = "green";
-        });
+            button.addEventListener("click", function () {
+              result.textContent = "Button was clicked!";
+              result.style.color = "green";
+            });
     </script>
   </body>
 </html>
