--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>Add commentMore actions
+<!doctype html>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,16 +21,16 @@
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
   <div id="root">
     <h1 id="main-title">Welcome to DOM</h1>
     <p class="message">This is a paragraph.</p>
     <button id="clickBtn">Click Me</button>
     <p id="result"></p>
   </div>
+ 
 
   <script type="module" src="/src/main.jsx">
+    <script >
 
         // Access and manipulate DOM
       const title = document.getElementById("main-title");
