React Exercise 2 is done

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 <body>
   <div id="root">
-    <h4 id="main-title">Welcome to DOM</h4>
+    <!-- <h4 id="main-title">Welcome to DOM</h4>
     <p class="message">This is a paragraph.</p>
     <button id="clickBtn">Click Me</button>
-    <p id="result"></p>
+    <p id="result"></p> -->
   </div>
  
 
