react exercise 3 is done

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>Add commentMore actions
+<!doctype html>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,14 +21,13 @@
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
   <div id="root">
-    <h1 id="main-title">Welcome to DOM</h1>
+    <!-- <h4 id="main-title">Welcome to DOM</h4>
     <p class="message">This is a paragraph.</p>
     <button id="clickBtn">Click Me</button>
-    <p id="result"></p>
+    <p id="result"></p> -->
   </div>
+ 
 
   <script type="module" src="/src/main.jsx">
 
