--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,32 +7,34 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
-     <div>
-      <h1 id="main-title">Welcome to DOM</h1>
-      <p class="message">This is a paragraph.</p>
-      <button id="clickBtn">Click Me</button>
-      <p id="result"></p>
+    <div id="root">
+      <div>
+        <h1 id="main-title">Welcome to DOM</h1>
+        <p class="message">This is a paragraph.</p>
+        <button id="clickBtn">Click Me</button>
+        <p id="result"></p>
+      </div>
     </div>
-    <script type="module" src="/src/main.jsx"></script>
-     <script>
-      // Access and manipulate DOM
-      const title = document.getElementById("main-title");
-      console.log("titile:", title);
-      title.textContent = "DOM Manipulated!";
 
-      const message = document.querySelector(".message");
-      message.style.color = "blue";
-      message.style.fontWeight = "bold";
+    <script type="module" src="/src/main.jsx">
+      //  <script>
+        // Access and manipulate DOM
+        const title = document.getElementById("main-title");
+        console.log("titile:", title);
+        title.textContent = "DOM Manipulated!";
 
-      // Event handling
-      const button = document.getElementById("clickBtn");
-      const result = document.getElementById("result");
+        const message = document.querySelector(".message");
+        message.style.color = "blue";
+        message.style.fontWeight = "bold";
 
-      button.addEventListener("click", function () {
-        result.textContent = "Button was clicked!";
-        result.style.color = "green";
-      });
+        // Event handling
+        const button = document.getElementById("clickBtn");
+        const result = document.getElementById("result");
+
+        button.addEventListener("click", function () {
+          result.textContent = "Button was clicked!";
+          result.style.color = "green";
+        });
     </script>
   </body>
 </html>
