--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <script type="module" src="/src/main.jsx">
-      <!-- <script> -->
+      //<script>
         // Access and manipulate DOM
         const title = document.getElementById("main-title");
         console.log("titile:", title);
