react exercise 9 is done

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html>Add commentMore actions
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,14 +21,11 @@
 </head>
 
 <body>
-  <div id="root">
-    <!-- <h4 id="main-title">Welcome to DOM</h4>
+  <div id="root"><h1 id="main-title">Welcome to DOM</h1>
     <p class="message">This is a paragraph.</p>
     <button id="clickBtn">Click Me</button>
-    <p id="result"></p> -->
-  </div>
- 
-
+    <p id="result"></p></div>
+  
   <script type="module" src="/src/main.jsx">
 
         // Access and manipulate DOM
