--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <style>Add commentMore actions
+      body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+      }
+      #clickBtn {
+        margin-top: 10px;
+      }
+    </style>
   </head>
-  <body>
-    <div id="root"></div>
-     </head>
-  <body>
-    <div id="root"></div>
-     <div>
+ <body>
+    <!-- <div id="root"></div> -->
+    <script type="module" src="/src/main.jsx"></script>
+    <div id="root">
       <h1 id="main-title">Welcome to DOM</h1>
       <p class="message">This is a paragraph.</p>
       <button id="clickBtn">Click Me</button>
       <p id="result"></p>
-    </div>
-    <script type="module" src="/src/main.jsx"></script>
-     <script>
-      // Access and manipulate DOM
+    </div> -->
+
+    <!-- <script type="module" src="/src/main.jsx">
+
+        // Access and manipulate DOM
       const title = document.getElementById("main-title");
       console.log("titile:", title);
       title.textContent = "DOM Manipulated!";
@@ -36,9 +45,6 @@
         result.textContent = "Button was clicked!";
         result.style.color = "green";
       });
-    </script>
-  </body>
-</html>
-    <script type="module" src="/src/main.jsx"></script>
+    </script> -->
   </body>
 </html>
