some changes and exercise 8 and exercise 9 is done

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
      <div>
       <h1 id="main-title">Welcome to DOM</h1>
       <p class="message">This is a paragraph.</p>
       <button id="clickBtn">Click Me</button>
       <p id="result"></p>
     </div>
-    <script type="module" src="/src/main.jsx"></script>
-    <script>
+    <script type="module" src="/src/main.jsx">
+
       // Access and manipulate DOM
       const title = document.getElementById("main-title");
       console.log("titile:", title);
